<resources>
    <string name="app_name">Garde Manger</string>
    <!-- Label for overflow menu option that inserts fake plant data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <!-- Label for overflow menu option that deletes all plant data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Food Data</string>
    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding something</string>
    <!-- Title for the activity to add a new pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_food">Add a Food</string>
    <string name="editor_activity_title_new_recipe">Add a Recipe</string>
    <!-- Title for the activity to edit an existing pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_food">Edit Food</string>
    <string name="editor_activity_title_edit_recipe">Edit Recipe</string>
    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>
    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>
    <!-- Toast message in editor when new pet has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_food_successful">Food saved</string>
    <string name="editor_insert_recipe_successful">Recipe saved</string>
    <string name="editor_insert_food_in_list_successful">Food saved to the shopping list</string>
    <!-- Toast message in editor when new pet has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_food_failed">Error with saving food</string>
    <string name="editor_insert_recipe_failed">Error with saving recipe</string>
    <string name="editor_insert_food_in_list_failed">Error with saving food to shopping list</string>
    <!-- Toast message in editor when current pet was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_food_successful">Food updated</string>
    <string name="editor_update_recipe_successful">Recipe updated</string>
    <!-- Toast message in editor when current pet has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_food_failed">Error with updating food</string>
    <string name="editor_update_recipe_failed">Error with updating recipe</string>
    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>
    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>
    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_food_successful">Food deleted</string>
    <string name="editor_delete_recipe_successful">Recipe deleted</string>
    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_food_failed">Error with deleting food</string>
    <string name="editor_delete_recipe_failed">Error with deleting recipe</string>
    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_food_dialog_msg">Delete this food?</string>
    <string name="delete_recipe_dialog_msg">Delete this recipe?</string>
    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>
    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>
    <!-- Label for the minus button -->
    <string name="minus">-</string>
    <!-- Label for the plus button -->
    <string name="plus">+</string>
    <!-- Hint for the name -->
    <string name="hint_name">Name</string>
    <!-- Toast message for the name -->
    <string name="food_name_required">Food name required</string>
    <string name="recipe_name_required">Recipe name required</string>
    <string name="quantity_text_item">Quantity in stock:</string>
    <!-- Label for the quantity in stock text -->
    <string name="quantity_in_stock">Quantity:</string>
    <!-- Infos for the dummy plant data -->
    <string name="dummy_food_name">Dummy Food</string>
    <string name="dummy_food_quantity">1</string>
    <string name="dummy_food_expiry_date">02/15</string>
    <string name="category_fruits_legumes">FruiLeg</string>
    <string name="category_frigo">Frigo</string>
    <string name="category_congelo">Congelo</string>
    <string name="category_placards">Placards</string>
    <string name="category_epices">Epices</string>
    <string name="exp_date">Exp. Date:</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="type">Type</string>
    <string name="hint_exp_date">Exp. Date</string>
    <string name="scale_type_numeric">Numeric</string>
    <string name="scale_type_custom">Custom</string>
    <string name="list_shopping">Shopping List</string>
    <string name="recipes">Recipes</string>
    <string name="go_in_the_garde_manger">Go in the garde manger</string>
    <string name="dummy_shopping_name">Dummy Shop Item</string>
    <string name="dummy_shopping_uri">content://com.example.android.garde_manger/fruitlegumes/1</string>
    <string name="done">Done</string>
    <string name="add_to_shopping_list">Add to Shopping List</string>
    <string name="editor_add_new_to_list">Create the food item before add to list</string>
    <string name="already_in_shopping_list">This food is already in the list</string>
    <string name="item_in_shopping_list">Item in shopping list:</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="dummy_recipe_name">Dummy Recipe</string>
    <string name="finish">Finish</string>
    <string name="choose_ingredient">Choose ingredient</string>
    <string name="fruits_et_legumes">Fruits et Legumes:</string>
    <string name="frigo">Frigo:</string>
    <string name="congelo">Congelo:</string>
    <string name="placards">Placards:</string>
    <string name="epices">Epices:</string>
    <string name="select_ingredient">Select Ingredient</string>
    <string name="go_add_ingredient_in_a_recipe">Go add ingredient in a recipe</string>
    <string name="recipes_with_this_item">Recipes with this item:</string>
</resources>
