<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.garde_manger.MainActivity">

    <LinearLayout
        android:id="@+id/main_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/main_course_list"
            style="@style/EditorButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/activity_margin"
            android:text="@string/list_shopping" />

        <Button
            android:id="@+id/main_garde_manger"
            style="@style/EditorButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/activity_margin"
            android:padding="@dimen/activity_margin"
            android:text="@string/app_name" />

        <Button
            android:id="@+id/main_recette_list"
            style="@style/EditorButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/activity_margin"
            android:text="@string/recipes" />

    </LinearLayout>

</RelativeLayout>
