<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarStyle="insideOverlay"
    tools:context="com.example.android.garde_manger.EditorActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin">

            <LinearLayout
                android:id="@+id/edit_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/CategoryStyle"
                        android:layout_height="wrap_content"
                        android:text="@string/name" />

                    <TextView
                        style="@style/CategoryStyle"
                        android:layout_height="wrap_content"
                        android:text="@string/type" />

                    <TextView
                        style="@style/CategoryStyle"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:text="@string/quantity" />

                    <TextView
                        style="@style/CategoryStyle"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/hint_exp_date" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_margin"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edit_food_name"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_name"
                        android:inputType="textCapWords" />

                    <Spinner
                        android:id="@+id/spinner_type"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:spinnerMode="dropdown" />

                    <LinearLayout
                        android:id="@+id/edit_quantity_picker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/button_minus"
                            style="@style/EditorButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/minus"
                            android:textSize="@dimen/editor_quantity_text_size" />

                        <TextView
                            android:id="@+id/edit_quantity_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/edit_quantity_padding"
                            android:paddingRight="@dimen/edit_quantity_padding"
                            android:textAlignment="center"
                            android:textSize="@dimen/editor_quantity_text_size"
                            tools:text="0" />

                        <Button
                            android:id="@+id/button_plus"
                            style="@style/EditorButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/plus"
                            android:textSize="@dimen/editor_quantity_text_size" />

                    </LinearLayout>

                    <EditText
                        android:id="@+id/edit_food_exp_date"
                        style="@style/EditorFieldStyle"
                        android:layout_marginTop="9dp"
                        android:hint="@string/hint_exp_date"
                        android:inputType="textCapWords" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/course_list_interaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_overview"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorAccentDark" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/CategoryStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_in_shopping_list" />

                    <TextView
                        android:id="@+id/item_in_list_text_view"
                        style="@style/CategoryStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_padding"
                        android:layout_marginStart="@dimen/activity_padding"
                        tools:text="Yes" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/add_course_quantity_editor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/CategoryStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/activity_margin"
                        android:layout_marginRight="@dimen/activity_margin"
                        android:text="@string/quantity" />

                    <EditText
                        android:id="@+id/edit_add_course_quantity"
                        style="@style/EditorFieldStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/quantity" />

                </LinearLayout>

                <Button
                    android:id="@+id/add_course_list_button"
                    style="@style/EditorButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_padding"
                    android:padding="@dimen/activity_margin"
                    android:text="@string/add_to_shopping_list" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorAccentDark" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/course_list_interaction"
                android:orientation="vertical">

                <TextView

                    style="@style/CategoryStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recipes_with_this_item" />

                <TextView
                    android:id="@+id/editor_recette_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_margin"
                    android:text="@string/go_add_ingredient_in_a_recipe"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16sp" />

            </LinearLayout>

        </RelativeLayout>

    </FrameLayout>

</ScrollView>
