<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:drawable/dialog_holo_light_frame"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/recette_name"
        style="@style/ListItemPlantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        tools:text="Recipe Name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginStart="@dimen/activity_margin"
            android:paddingLeft="@dimen/activity_padding"
            android:paddingRight="@dimen/activity_padding"
            android:text="@string/fruits_et_legumes"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/recette_fruitleg_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            tools:text="Ingredients" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginStart="@dimen/activity_margin"
            android:paddingLeft="@dimen/activity_padding"
            android:paddingRight="@dimen/activity_padding"
            android:text="@string/frigo"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/recette_frigo_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            tools:text="Ingredients" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginStart="@dimen/activity_margin"
            android:paddingLeft="@dimen/activity_padding"
            android:paddingRight="@dimen/activity_padding"
            android:text="@string/congelo"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/recette_congelo_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            tools:text="Ingredients" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginStart="@dimen/activity_margin"
            android:paddingLeft="@dimen/activity_padding"
            android:paddingRight="@dimen/activity_padding"
            android:text="@string/placards"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/recette_placards_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            tools:text="Ingredients" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginStart="@dimen/activity_margin"
            android:paddingLeft="@dimen/activity_padding"
            android:paddingRight="@dimen/activity_padding"
            android:text="@string/epices"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/recette_epices_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            tools:text="Ingredients" />

    </LinearLayout>

</LinearLayout>